Add a FastCGI handler
darcs-hash:20070226175905-4fc50-ebc594a3b1c04fd053473970da0466f7da311739.gz

--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -1,4 +1,5 @@
-server.modules = ("mod_cgi")
+# *First* fastcgi, then cgi, or lighttpd breaks.  Grml.
+server.modules = ("mod_fastcgi", "mod_cgi")
 server.document-root = "."
 server.errorlog = "lighttpd.errors"
 server.port = 9203
@@ -7,3 +8,7 @@ server.event-handler = "freebsd-kqueue"
 
 cgi.assign = ("/test" => "/usr/local/bin/ruby")
 
+fastcgi.server = ("test.fcgi" => ("localhost" =>
+                    ("min-procs" => 1,
+                     "socket" => "/tmp/rack-test-fcgi",
+                     "bin-path" => "test.fcgi")))
