--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -6,9 +6,16 @@ server.port = 9203
 
 server.event-handler = "freebsd-kqueue"
 
-cgi.assign = ("/test" => "/usr/local/bin/ruby")
+cgi.assign = ("/test" => "/usr/local/bin/ruby",
+#              ".ru" => ""
+             )
 
 fastcgi.server = ("test.fcgi" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-fcgi",
-                     "bin-path" => "test.fcgi")))
+                     "bin-path" => "test.fcgi")),
+                  "test.ru" => ("localhost" =>
+                    ("min-procs" => 1,
+                     "socket" => "/tmp/rack-test-ru-fcgi",
+                     "bin-path" => "test.ru")),
+                 )
