--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -5,7 +5,7 @@ server.port = 9203
 
 server.event-handler = "freebsd-kqueue"
 
-cgi.assign = ("/test" => "/usr/local/bin/ruby",
+cgi.assign = ("/test" => "",
 #              ".ru" => ""
              )
 
