Add a failing test and fix for #90
Signed-off-by: Christian Neukirchen <chneukirchen@gmail.com>

--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -9,7 +9,8 @@ cgi.assign = ("/test" => "",
 #              ".ru" => ""
              )
 
-fastcgi.server = ("test.fcgi" => ("localhost" =>
+fastcgi.server = (
+                  "test.fcgi" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-fcgi",
                      "bin-path" => "test.fcgi")),
@@ -17,4 +18,8 @@ fastcgi.server = ("test.fcgi" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-ru-fcgi",
                      "bin-path" => "test.ru")),
+                  "sample_rackup.ru" => ("localhost" =>
+                    ("min-procs" => 1,
+                     "socket" => "/tmp/rack-test-rackup-fcgi",
+                     "bin-path" => CWD + "/rackup_stub.rb sample_rackup.ru")),
                  )
