Fix spec requires and the missing ones

--- a/spec/cgi/lighttpd.conf
+++ b/spec/cgi/lighttpd.conf
@@ -1,6 +1,6 @@
 server.modules = ("mod_fastcgi", "mod_cgi")
 server.document-root = "."
-server.errorlog = "lighttpd.errors"
+server.errorlog = var.CWD + "/lighttpd.errors"
 server.port = 9203
 
 server.event-handler = "select"
