--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -17,7 +17,7 @@ fastcgi.server = (
                   "test.ru" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-ru-fcgi",
-                     "bin-path" => "test.ru")),
+                     "bin-path" => CWD + "/rackup_stub.rb test.ru")),
                   "sample_rackup.ru" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-rackup-fcgi",
