--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -1,6 +1,6 @@
 server.modules = ("mod_fastcgi", "mod_cgi")
 server.document-root = "."
-server.errorlog = var.CWD + "/lighttpd.errors"
+server.errorlog = var.CWD << "/lighttpd.errors"
 server.port = 9203
 
 server.event-handler = "select"
@@ -17,9 +17,9 @@ fastcgi.server = (
                   "test.ru" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-ru-fcgi",
-                     "bin-path" => CWD + "/rackup_stub.rb test.ru")),
+                     "bin-path" => CWD << "/rackup_stub.rb test.ru")),
                   "sample_rackup.ru" => ("localhost" =>
                     ("min-procs" => 1,
                      "socket" => "/tmp/rack-test-rackup-fcgi",
-                     "bin-path" => CWD + "/rackup_stub.rb sample_rackup.ru")),
+                     "bin-path" => CWD << "/rackup_stub.rb sample_rackup.ru")),
                  )
