Stop binding to public addresses during tests, annoying firewall popups and so on.

--- a/test/cgi/lighttpd.conf
+++ b/test/cgi/lighttpd.conf
@@ -2,6 +2,7 @@ server.modules = ("mod_fastcgi", "mod_cgi")
 server.document-root = "."
 server.errorlog = var.CWD + "/lighttpd.errors"
 server.port = 9203
+server.bind = "127.0.0.1"
 
 server.event-handler = "select"
 
