--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 before_install: sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
+install:
+  - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
+  - gem install --conservative rake
+  - rake deps
 script: rake fulltest
 rvm:
   - 1.8.7
