--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
   - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
   - gem install --conservative rake
   - rake deps
-script: rake fulltest
+script: rake ci
 rvm:
   - 1.8.7
   - 1.9.2
