--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,9 @@ rvm:
   - rbx-2.0
   - jruby
   - ree
+branches:
+  # The old 1.1, 1.2, and 1.3 branches aren't correctly setup yet.
+  only: master
 notifications:
   email: false
+  irc: "irc.freenode.org#rack"
