--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
+before_install: sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
 script: rake fulltest
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - rbx
   - rbx-2.0
   - jruby
   - ree
 notifications:
   email: false
+  irc: "irc.freenode.org#rack"
