Allow failures on rbx until we use a version that is bundled with rubysl-openssl 2.0.5
This is due to https://github.com/rubysl/rubysl-openssl/pull/2

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ rvm:
   - rbx
   - jruby
   - ree
+matrix:
+  allow_failures:
+    - rvm: rbx
 notifications:
   email: false
   irc: "irc.freenode.org#rack"
