--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ rvm:
   - 2.0.0
   - 2.1
   - ruby-head
-  - rbx
+  - rbx-2
   - jruby
   - ree
 matrix:
   allow_failures:
-    - rvm: rbx
+    - rvm: rbx-2
 notifications:
   email: false
   irc: "irc.freenode.org#rack"
