--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 before_install: sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
 install:
   - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
-  - bundle
+  - bundle install --jobs=3 --retry=3
 script: bundle exec rake ci
 rvm:
   - 1.8.7
