--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
       - test-ruby-2.2
       - test-ruby-2.3
       - test-ruby-2.4
+      - test-ruby-2.5
 
 version: 2
 jobs:
@@ -90,4 +91,29 @@ jobs:
 
       - run: bundle exec rake ci
 
+  test-ruby-2.5:
+    docker:
+      - image: circleci/ruby:2.5
+        # Spawn a process owned by root
+        # This works around an issue explained here:
+        # https://github.com/circleci/circleci-images/pull/132
+        command: sudo /bin/sh
+      - image: memcached:1.4
+    steps:
+      - checkout
+      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
 
+      # Restore bundle cache
+      - type: cache-restore
+        key: rack-{{ checksum "rack.gemspec" }}
+
+      # Bundle install dependencies
+      - run: bundle install --path vendor/bundle
+
+      # Store bundle cache
+      - type: cache-save
+        key: rack-{{ checksum "rack.gemspec" }}
+        paths:
+          - vendor/bundle
+
+      - run: bundle exec rake ci
