--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ addons:
       - libfcgi-dev
 
 before_install:
-  - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
-  - gem list -i bundler || gem install bundler
+  - gem update --system 2.7.4
+  - gem install bundler
 
 script: bundle exec rake ci
 
