DRY circleci.yml jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,26 @@ workflows:
       - test-ruby-2.5
 
 version: 2
+
+default-steps: &default-steps
+  - checkout
+  - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
+
+  # Restore bundle cache
+  - type: cache-restore
+    key: rack-{{ checksum "rack.gemspec" }}
+
+  # Bundle install dependencies
+  - run: bundle install --path vendor/bundle
+
+  # Store bundle cache
+  - type: cache-save
+    key: rack-{{ checksum "rack.gemspec" }}
+    paths:
+      - vendor/bundle
+
+  - run: bundle exec rake ci
+
 jobs:
   test-ruby-2.2:
     docker:
@@ -18,24 +38,7 @@ jobs:
         # https://github.com/circleci/circleci-images/pull/132
         command: sudo /bin/sh
       - image: memcached:1.4
-    steps:
-      - checkout
-      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
-
-      # Restore bundle cache
-      - type: cache-restore
-        key: rack-{{ checksum "rack.gemspec" }}
-
-      # Bundle install dependencies
-      - run: bundle install --path vendor/bundle
-
-      # Store bundle cache
-      - type: cache-save
-        key: rack-{{ checksum "rack.gemspec" }}
-        paths:
-          - vendor/bundle
-
-      - run: bundle exec rake ci
+    steps: *default-steps
 
   test-ruby-2.3:
     docker:
@@ -45,24 +48,7 @@ jobs:
         # https://github.com/circleci/circleci-images/pull/132
         command: sudo /bin/sh
       - image: memcached:1.4
-    steps:
-      - checkout
-      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
-
-      # Restore bundle cache
-      - type: cache-restore
-        key: rack-{{ checksum "rack.gemspec" }}
-
-      # Bundle install dependencies
-      - run: bundle install --path vendor/bundle
-
-      # Store bundle cache
-      - type: cache-save
-        key: rack-{{ checksum "rack.gemspec" }}
-        paths:
-          - vendor/bundle
-
-      - run: bundle exec rake ci
+    steps: *default-steps
 
   test-ruby-2.4:
     docker:
@@ -72,24 +58,7 @@ jobs:
         # https://github.com/circleci/circleci-images/pull/132
         command: sudo /bin/sh
       - image: memcached:1.4
-    steps:
-      - checkout
-      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
-
-      # Restore bundle cache
-      - type: cache-restore
-        key: rack-{{ checksum "rack.gemspec" }}
-
-      # Bundle install dependencies
-      - run: bundle install --path vendor/bundle
-
-      # Store bundle cache
-      - type: cache-save
-        key: rack-{{ checksum "rack.gemspec" }}
-        paths:
-          - vendor/bundle
-
-      - run: bundle exec rake ci
+    steps: *default-steps
 
   test-ruby-2.5:
     docker:
@@ -99,21 +68,4 @@ jobs:
         # https://github.com/circleci/circleci-images/pull/132
         command: sudo /bin/sh
       - image: memcached:1.4
-    steps:
-      - checkout
-      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
-
-      # Restore bundle cache
-      - type: cache-restore
-        key: rack-{{ checksum "rack.gemspec" }}
-
-      # Bundle install dependencies
-      - run: bundle install --path vendor/bundle
-
-      # Store bundle cache
-      - type: cache-save
-        key: rack-{{ checksum "rack.gemspec" }}
-        paths:
-          - vendor/bundle
-
-      - run: bundle exec rake ci
+    steps: *default-steps
