Enable Style/HashSyntax in rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,7 @@ AllCops:
   DisabledByDefault: true
   Exclude:
     - '**/vendor/**/*'
+
+# Use Ruby >= 1.9 syntax for hashes. Prefer { a: :b } over { :a => :b }.
+Style/HashSyntax:
+  Enabled: true
