--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,16 +16,18 @@ default-steps: &default-steps
 
   # Restore bundle cache
   - type: cache-restore
-    key: rack-{{ checksum "rack.gemspec" }}
+    key: rack-{{ checksum "rack.gemspec" }}-{{ checksum "Gemfile" }}
 
   # Bundle install dependencies
   - run: bundle install --path vendor/bundle
 
   # Store bundle cache
   - type: cache-save
-    key: rack-{{ checksum "rack.gemspec" }}
+    key: rack-{{ checksum "rack.gemspec" }}-{{ checksum "Gemfile" }}
     paths:
       - vendor/bundle
+
+  - run: bundle exec rubocop
 
   - run: bundle exec rake ci
 
