RuboCop: frozen string literals, comment whitespace (#1256)
* RuboCop: Style/FrozenStringLiteralComment, Layout/EmptyLineAfterMagicComment, Layout/LeadingCommentSpace
* Removed duplicated magic comments in Rack::RewindableInput

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,18 @@ AllCops:
   Exclude:
     - '**/vendor/**/*'
 
+Style/FrozenStringLiteralComment:
+  Enabled: true
+  EnforcedStyle: always
+
 # Use Ruby >= 1.9 syntax for hashes. Prefer { a: :b } over { :a => :b }.
 Style/HashSyntax:
   Enabled: true
+
+Layout/EmptyLineAfterMagicComment:
+  Enabled: true
+
+Layout/LeadingCommentSpace:
+  Enabled: true
+  Exclude:
+    - 'test/builder/options.ru'
