Enable jruby:9.1 in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
       - test-ruby-2.3
       - test-ruby-2.4
       - test-ruby-2.5
+      - test-jruby-9.1
 
 version: 2
 
@@ -71,3 +72,31 @@ jobs:
         command: sudo /bin/sh
       - image: memcached:1.4
     steps: *default-steps
+
+  test-jruby-9.1:
+    docker:
+      - image: circleci/jruby:9.1
+        # Spawn a process owned by root
+        # This works around an issue explained here:
+        # https://github.com/circleci/circleci-images/pull/132
+        command: sudo /bin/sh
+      - image: memcached:1.4
+    steps:
+      - checkout
+      - run: sudo apt-get install lighttpd libfcgi-dev libmemcached-dev
+
+      # Restore bundle cache
+      - type: cache-restore
+        key: rack-jruby-{{ checksum "rack.gemspec" }}-{{ checksum "Gemfile" }}
+
+      # Bundle install dependencies
+      - run: bundle install --path vendor/bundle
+
+      # Store bundle cache
+      - type: cache-save
+        key: rack-jruby-{{ checksum "rack.gemspec" }}-{{ checksum "Gemfile" }}
+        paths:
+          - vendor/bundle
+
+      - run: bundle exec rubocop
+      - run: bundle exec rake ci
