Run tests on Ruby 2.7

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
       - test-ruby-2.4
       - test-ruby-2.5
       - test-ruby-2.6
+      - test-ruby-2.7
 
 version: 2
 
@@ -83,6 +84,16 @@ jobs:
         command: sudo /bin/sh
       - image: memcached:1.4
     steps: *default-steps
+  
+  test-ruby-2.7:
+    docker:
+      - image: circleci/ruby:2.7
+        # Spawn a process owned by root
+        # This works around an issue explained here:
+        # https://github.com/circleci/circleci-images/pull/132
+        command: sudo /bin/sh
+      - image: memcached:1.4
+    steps: *default-steps    
 
   test-jruby:
     docker:
