--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
+dist: trusty
+language: ruby
 before_install: sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
 install:
   - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
-  - gem install --conservative rake
+  - gem install rake -v '~> 0.9.6'
   - rake deps
 script: rake ci
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - rbx-2.0
-  - jruby
+  - 2.0.0
+  - jruby-1.7
   - ree
-branches:
-  # The old 1.1, 1.2, and 1.3 branches aren't correctly setup yet.
-  only: master
-notifications:
-  email: false
-  irc: "irc.freenode.org#rack"
