--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,9 @@ Style/FrozenStringLiteralComment:
 Style/HashSyntax:
   Enabled: true
 
+Style/MethodDefParentheses:
+  Enabled: true
+
 Layout/EmptyLineAfterMagicComment:
   Enabled: true
 
