Enable `Layout/Tab` to avoid hard tab indentation in the future
Ref https://github.com/rack/rack/pull/1549#discussion_r375470299, 1f89eaafd39040707bf2a76cab134dd7a78b1441.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,5 +50,8 @@ Layout/SpaceBeforeFirstArg:
 Layout/SpaceInsideHashLiteralBraces:
   Enabled: true
 
+Layout/Tab:
+  Enabled: true
+
 Layout/TrailingWhitespace:
   Enabled: true
