--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,11 +3,12 @@ name: Development
 on: [push]
 
 jobs:
+  
   test:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         ruby: [2.3, 2.4, 2.5, 2.6, 2.7, jruby, truffleruby]
     runs-on: ${{matrix.os}}
     steps:
@@ -21,9 +22,17 @@ jobs:
         key: bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-${{hashFiles('**/Gemfile')}}
         restore-keys: |
           bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-
-    - name: Install dependencies...
+    
+    - name: Installing packages
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get install libfcgi-dev libmemcached-dev
+    
+    - name: Installing packages
+      if: matrix.os == 'macos-latest'
+      run: brew install fcgi libmemcached
+    
+    - name: Bundle install...
       run: |
-        sudo apt-get install libfcgi-dev libmemcached-dev
         bundle config path vendor/bundle
         bundle install
     - run: bundle exec rake
