--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: [2.3, 2.4, 2.5, 2.6, 2.7, jruby, truffleruby]
+        ruby: [2.3, 2.4, 2.5, 2.6, 2.7, jruby]
     runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v2
