Add external tests.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,7 +3,6 @@ name: Development
 on: [push]
 
 jobs:
-  
   test:
     strategy:
       fail-fast: false
@@ -13,9 +12,11 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v2
+
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{matrix.ruby}}
+
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
@@ -23,11 +24,11 @@ jobs:
         restore-keys: |
           bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-
     
-    - name: Installing packages
+    - name: Installing packages (ubuntu)
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get install libfcgi-dev libmemcached-dev
     
-    - name: Installing packages
+    - name: Installing packages (macos)
       if: matrix.os == 'macos-latest'
       run: brew install fcgi libmemcached
     
@@ -35,4 +36,34 @@ jobs:
       run: |
         bundle config path vendor/bundle
         bundle install
+
     - run: bundle exec rake
+
+  external:
+    needs: test
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        ruby: [2.6, 2.7]
+    runs-on: ${{matrix.os}}
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{matrix.ruby}}
+
+    - uses: actions/cache@v1
+      with:
+        path: vendor/bundle
+        key: bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-${{hashFiles('**/Gemfile')}}
+        restore-keys: |
+          bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-
+
+    - name: Bundle install...
+      run: |
+        bundle config path vendor/bundle
+        bundle install
+
+    - run: bundle exec rake external
