Install memcache dependency for rack-cache.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -61,6 +61,14 @@ jobs:
         restore-keys: |
           bundle-use-ruby-${{matrix.os}}-${{matrix.ruby}}-
 
+    - name: Installing packages (ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get install libmemcached-dev
+    
+    - name: Installing packages (macos)
+      if: matrix.os == 'macos-latest'
+      run: brew install libmemcached
+
     - name: Bundle install...
       run: |
         bundle config path vendor/bundle
