--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: [2.4, 2.5, 2.6, 2.7, 3.0, jruby, truffleruby-head]
+        ruby: [2.4, 2.5, 2.6, 2.7, '3.0', jruby, truffleruby-head]
     runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v2
