Explicitly update RubyGems to avoid CI failures on old Rubies.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Bundle install...
       run: |
+        gem update --system
         bundle config path vendor/bundle
         bundle install
 
